RESOLVED FIXED66604
New XML parser: text nodes outside of root element not created for document fragments
https://bugs.webkit.org/show_bug.cgi?id=66604
Summary New XML parser: text nodes outside of root element not created for document f...
Vicki Pfau
Reported 2011-08-19 16:04:28 PDT
New XML parser: text nodes outside of root element not created document fragments
Attachments
Patch (3.22 KB, patch)
2011-08-19 16:11 PDT, Vicki Pfau
no flags
Vicki Pfau
Comment 1 2011-08-19 16:11:37 PDT
Darin Adler
Comment 2 2011-08-19 16:12:50 PDT
Comment on attachment 104584 [details] Patch Test cases?
Vicki Pfau
Comment 3 2011-08-19 16:43:42 PDT
(In reply to comment #2) > (From update of attachment 104584 [details]) > Test cases? This fixes anything that has XHTML with a script that contains element.innerHTML = "anything that has text outside of an element"; For example, svg/custom/getBoundingClientRect.xhtml
WebKit Review Bot
Comment 4 2011-08-19 17:46:06 PDT
Comment on attachment 104584 [details] Patch Clearing flags on attachment: 104584 Committed r93460: <http://trac.webkit.org/changeset/93460>
WebKit Review Bot
Comment 5 2011-08-19 17:46:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.