New XML parser: text nodes outside of root element not created for document fragments https://bugs.webkit.org/show_bug.cgi?id=66604

When intializing a fragment parser, declare that the first element has been seen. Also, flush the text nodes when finishing parsing a document.

Reviewed by Darin Adler.

* xml/parser/NewXMLDocumentParser.cpp:
(WebCore::NewXMLDocumentParser::finish):
* xml/parser/XMLTreeBuilder.cpp:
(WebCore::XMLTreeBuilder::XMLTreeBuilder):
(WebCore::XMLTreeBuilder::processToken):
(WebCore::XMLTreeBuilder::finish):
* xml/parser/XMLTreeBuilder.h:


Canonical link: https://commits.webkit.org/82449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93460 268f45cc-cd09-0410-ab3c-d52691b4dbfc